--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <link rel='stylesheet' href='index.css'/>
 </head>
 <body>
+  <h1>GitHub Search</h1>
+<form id="search-form">
+  <input type="text" id="search-input" placeholder="Search GitHub users..." required>
+  <button type="submit">Search</button>
+</form>
+
+<div id="results"></div>
+<div id="repos"></div>
+
+<script src="src/index.js"></script>
+
   <div id='main'>
 
     <h2>GitHub Search</h2>
